[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ns_gym"
dynamic = ["version"]
description = "A simulation toolkit for non-stationary Markov decision processes"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.4",
    "gymnasium[mujoco]",
    "pygame",  
    "torch",
    "scipy",
    "matplotlib",
    "tensorboard",
    "pyyaml",
    "pandas",
    "stable_baselines3[extra]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "shibuya",
    "nbsphinx",
    "ipykernel",
    "myst_nb",
    "sphinx-math-dollar"
]

vehicle_env = [    
    "gridworldenvutils @ git+https://github.com/nkepling/GridWorldEnvUtils.git"
]

all = [
    "ns_gym[dev]", 
    "ns_gym[vehicle_env"
]

[tool.setuptools.packages.find]
include = ["ns_gym", "ns_gym.*"]

[tool.setuptools.dynamic]
version = {attr = "ns_gym.__version__"} 

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
