[build-system]
requires = ["setuptools>=42", "wheel","setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ns_gym"
dynamic = ["version"]
description = "A simulation toolkit for non-stationary Markov decision processes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"


dependencies = [
    "numpy>=1.26.4",
    "gymnasium[mujoco]",
    "mujoco>=3.3,<3.4",
    "pygame",  
    "torch",
    "scipy",
    "matplotlib",
    "tensorboard",
    "pyyaml",
    "pandas",
    "stable_baselines3[extra]",
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-cov",
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "shibuya",
    "nbsphinx",
    "ipykernel",
    "myst_nb",
    "sphinx-math-dollar",
    "tox",
    "tox-uv"
]


all = [
    "ns_gym[dev]"
]

[tool.setuptools.packages.find]
include = ["ns_gym", "ns_gym.*"]

# [tool.setuptools.dynamic]
# version = {attr = "ns_gym.__version__"} 

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://nsgym.io/"
Issues = "https://github.com/scope-lab-vu/ns_gym/issues"
Repo = "https://github.com/scope-lab-vu/ns_gym"